trailing comments in block, translate annotations in statements, source+comments in switch expression