@@ -166,10 +166,14 @@ public class IfElseStatementImpl extends StatementImpl implements IfElseStatemen
         List<Statement> direct = translationMap.translateStatement(this);
         if (hasBeenTranslated(direct, this)) return direct;
         Expression tex = expression.translate(translationMap);
-        Block tIf = (Block) block.translate(translationMap).get(0);
-        Block tElse = (Block) elseBlock.translate(translationMap).get(0);
-        if (tex != expression || tIf != block || tElse != elseBlock || !analysis().isEmpty() && translationMap.isClearAnalysis()) {
-            IfElseStatement ie = new IfElseStatementImpl(comments(), source(), annotations(), label(), tex, tIf, tElse);
+        Block tIf = (Block) block.translate(translationMap).getFirst();
+        Block tElse = (Block) elseBlock.translate(translationMap).getFirst();
+        List<AnnotationExpression> tAnnotations = translateAnnotations(translationMap);
+        if (tex != expression || tIf != block || tElse != elseBlock
+            || !analysis().isEmpty() && translationMap.isClearAnalysis()
+            || tAnnotations != annotations()) {
+            IfElseStatement ie = new IfElseStatementImpl(comments(), source(), tAnnotations, label(), tex,
+                    tIf, tElse);
             if (!translationMap.isClearAnalysis()) ie.analysis().setAll(analysis());
             return List.of(ie);
         }
